<resources>
    <string name="app_name">pawLuv</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="pawluv">pawLuv</string>
    <string name="tagline">Unleash the love.</string>
    <string name="login">Login</string>
    <string name="hint1">Email address</string>
    <string name="hint2">Password</string>
    <string name="lblSignup">Create Account</string>
    <string name="hint3">Name</string>
    <string name="hint4">Email</string>
    <string name="hint5">Mobile Number</string>
    <string name="hint6">Password</string>
    <string name="hint7">Confirm Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="googleSignIn">Sign in with Google</string>

    <string name="or">or</string>

    <string-array name="types">
        <item>Dog</item>
        <item>Cat</item>
        <item>Bird</item>
        <item>Turtle</item>
        <item>Rabbit</item>
    </string-array>
</resources>